--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ name: CI/CD Pipeline with Docker
 on:
   push:
     branches:
-      - main  # 或者你的主分支名称
+      - master  # 或者你的主分支名称
 
 jobs:
   build:
