--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,13 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+        # arm 架构
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Build with Maven
       run: mvn clean package -DskipTests
 
@@ -41,6 +48,7 @@ jobs:
       with:
         context: .
         push: true
+        platforms: linux/amd64,linux/arm64
         tags: ${{ secrets.DOCKER_USERNAME }}/ai-receipt-backend:latest
 
   # deploy:
