fix package issue

--- a/ansible/roles/mysql/tasks/main.yml
+++ b/ansible/roles/mysql/tasks/main.yml
@@ -2,7 +2,7 @@
   apt:
     update_cache: yes
     cache_valid_time: 3600
-  when: ansible_os_family == "Debian"
+  when: ansible_facts['os_family'] == "Debian"
 
 - name: Install MySQL server and client
   apt:
@@ -11,16 +11,24 @@
       - mysql-client
       - python3-pymysql
     state: present
-  when: ansible_os_family == "Debian"
+  when: ansible_facts['os_family'] == "Debian"
 
 - name: Install MySQL server (RedHat/CentOS)
   yum:
     name:
       - mysql-server
       - mysql
-      - python3-pymysql
+      - python3
+      - python3-pip
     state: present
-  when: ansible_os_family == "RedHat"
+  when: ansible_facts['os_family'] == "RedHat"
+
+- name: Ensure PyMySQL is installed via pip (RedHat/CentOS)
+  pip:
+    name: PyMySQL
+    executable: pip3
+    state: present
+  when: ansible_facts['os_family'] == "RedHat"
 
 - name: Start and enable MySQL service
   systemd:
