--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,9 @@ server:
 jwt:
   secret: {{ jwt_secret }}
   expiration: 86400000
+
+gemini:
+  api-key: {{ gemini_api_key }}
+  api-base: "https://generativelanguage.googleapis.com"
+  model: "gemini-2.5-flash-lite"
+  timeout-ms: 20000
