--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ jwt:
 
 gemini:
   # api-key: {{ gemini_api_key }}
-  # api-key: "AIzaSyDwJ2NYIoUZNnmvrvowyzky6WBEDkYJ93I"
+  # api-key: "YOUR_GEMINI_API_KEY"
   api-base: "https://generativelanguage.googleapis.com"
   model: "gemini-2.5-flash-lite"
   timeout-ms: 20000
