--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,10 @@ services:
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
       # Spring Boot relaxed binding maps GEMINI_API_KEY -> gemini.api-key
       GEMINI_API_KEY: ${GEMINI_API_KEY}
+      AWS_S3_BUCKET: ${AWS_S3_BUCKET}
+      AWS_S3_REGION: ${AWS_S3_REGION}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       # Currently JwtUtil uses a hardcoded secret, but keep this for future config work.
       JWT_SECRET: ${JWT_SECRET}
 
