--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ gemini:
   # api-key: {{ gemini_api_key }}
   # api-key: "YOUR_GEMINI_API_KEY"
   api-base: "https://generativelanguage.googleapis.com"
-  model: "gemini-2.5-flash-lite"
+  model: "gemini-2.5-flash"
   timeout-ms: 20000
 
 aws:
