--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,18 @@
 spring:
   application:
     name: ai-receipt-backend
+  mail:
+    host: smtp.purelymail.com
+    port: 587
+    username: admin@aireceipt.guanchengli.com
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+          from: admin@aireceipt.guanchengli.com
   datasource:
     url: jdbc:mysql://{{ db_host }}:{{ db_port }}/{{ db_name }}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: {{ db_user }}
@@ -23,6 +35,11 @@ server:
 jwt:
   secret: {{ jwt_secret }}
   expiration: 86400000
+
+app:
+  auth:
+    activation-link-base: ${ACTIVATION_LINK_BASE:https://aireceipt.guanchengli.com/activate}
+    activation-token-expire-hours: 24
 
 gemini:
   # api-key: {{ gemini_api_key }}
